--- a/index.html
+++ b/index.html
@@ -1172,6 +1172,23 @@ highest quality standard being met.
 
             </a>
           </li>
+          <li class="project-item active" data-filter-item data-category="social media">
+            <a href="https://drive.google.com/file/d/1W0yBZNN9QPyzkkq55RmM_poQq6ABwjIi/view?usp=drive_link" target="_blank">
+
+              <figure class="project-img">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
+
+                <img src="./assets/images/project24.jpg" alt="arrival" loading="lazy">
+              </figure>
+
+              <h3 class="project-title">FujiFilm</h3>
+
+              <p class="project-category">Social Media Campaign</p>
+
+            </a>
+          </li>
           <li class="project-item active" data-filter-item data-category="others">
             <a href="https://www.amazon.it/stores/page/ADB4C786-F9C1-4967-80D4-D83BA56050B5?ingress=0&visitId=5595989e-12e8-4e73-be75-4ac1ef4feb41" target="_blank">
   
@@ -1180,10 +1197,44 @@ highest quality standard being met.
                   <ion-icon name="eye-outline"></ion-icon>
                 </div>
   
-                <img src="./assets/images/project23.jpg" alt="arrival" loading="lazy">
+                <img src="./assets/images/project24.jpg" alt="arrival" loading="lazy">
               </figure>
   
               <h3 class="project-title">Carovit</h3>
+  
+              <p class="project-category">Amazon Brand Store</p>
+  
+            </a>
+          </li>
+          <li class="project-item active" data-filter-item data-category="others">
+            <a href="https://www.amazon.it/stores/page/219CB63B-1290-4FD3-AFCD-A08389EF5994?ingress=0&visitId=ee3ea359-9c51-4bd5-9098-79adb27b633d" target="_blank">
+  
+              <figure class="project-img">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
+  
+                <img src="./assets/images/project25.jpg" alt="arrival" loading="lazy">
+              </figure>
+  
+              <h3 class="project-title">Saugella</h3>
+  
+              <p class="project-category">Amazon Brand Store</p>
+  
+            </a>
+          </li>
+          <li class="project-item active" data-filter-item data-category="others">
+            <a href="https://www.amazon.it/stores/page/2D2043F5-5F10-4135-834A-3F67AADE80A0?ingress=0&visitId=1a89e73b-484c-4605-a5a2-7b7029e4c3f8" target="_blank">
+  
+              <figure class="project-img">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
+  
+                <img src="./assets/images/project26.jpg" alt="arrival" loading="lazy">
+              </figure>
+  
+              <h3 class="project-title">Estromineral</h3>
   
               <p class="project-category">Amazon Brand Store</p>
   
