--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@ highest quality standard being met.
             <select id="categoryFilter">
               <option value="all">All</option>
               <option value="campaign design">Campaign Key Visuals</option>
-              <option value="logos">Logos</option>
+            <!--  <option value="logos">Logos</option>-->
               <option value="brochure">Brochure</option>
               <option value="social media">Social Media</option>
               <option value="others">Others</option>
