--- a/index.html
+++ b/index.html
@@ -749,35 +749,13 @@ highest quality standard being met.
 
         <div class="filter-select-box">
 
-          <button class="filter-select" data-select>
+          <button  data-select>
 
-            <div class="select-value" data-selecct-value>Select category</div>
-
-            <div class="select-icon">
-              <ion-icon name="chevron-down"></ion-icon>
-            </div>
+            
 
           </button>
 
-          <ul class="select-list">
-
-            <li class="select-item">
-              <button data-select-item>All</button>
-            </li>
-
-            <li class="select-item">
-              <button data-select-item>WCam</button>
-            </li>
-
-            <li class="select-item">
-              <button data-select-item>Applications</button>
-            </li>
-
-            <li class="select-item">
-              <button data-select-item>Web development</button>
-            </li>
-
-          </ul>
+         
 
 
         </div>
@@ -887,6 +865,42 @@ highest quality standard being met.
             </a>
           </li>
 
+          <li class="project-item active" data-filter-item data-category="others">
+            <a href="https://drive.google.com/drive/folders/1hHwlMj8nxr7a59wk6hNCldOFBbyLM_nR" target="_blank">
+
+              <figure class="project-img">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
+
+                <img src="./assets/images/project09.jpg" alt="orizon" loading="lazy">
+              </figure>
+
+              <h3 class="project-title">illustration & Sketches</h3>
+
+              <p class="project-category"></p>
+
+            </a>
+          </li>
+
+
+          <li class="project-item active" data-filter-item data-category="others">
+            <a href="https://drive.google.com/drive/folders/1a-WDDzStcYukdecpFFe6ut6ilvmG4P_y" target="_blank">
+
+              <figure class="project-img">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
+
+                <img src="./assets/images/project02.jpg" alt="orizon" loading="lazy">
+              </figure>
+
+              <h3 class="project-title">Hetero</h3>
+
+              <p class="project-category">Packaging Identity</p>
+
+            </a>
+          </li>
           <li class="project-item active" data-filter-item data-category="campaign design">
             <a href="https://drive.google.com/file/d/1EFC5MedVoOMpv8QqPRqkqFwGG1LL_IIY/view?usp=drive_link" target="_blank">
 
@@ -953,6 +967,23 @@ highest quality standard being met.
               <h3 class="project-title">Viatris - Viatris Connect Program</h3>
 
               <p class="project-category">Campaign Keyvisuals</p>
+
+            </a>
+          </li>
+          <li class="project-item active" data-filter-item data-category="others">
+            <a href="https://drive.google.com/drive/folders/1a-WDDzStcYukdecpFFe6ut6ilvmG4P_y" target="_blank">
+
+              <figure class="project-img">
+                <div class="project-item-icon-box">
+                  <ion-icon name="eye-outline"></ion-icon>
+                </div>
+
+                <img src="./assets/images/project01.jpg" alt="orizon" loading="lazy">
+              </figure>
+
+              <h3 class="project-title">Jobverse</h3>
+
+              <p class="project-category">Brand Guidelines</p>
 
             </a>
           </li>
@@ -1222,6 +1253,23 @@ highest quality standard being met.
               <p class="project-category">Amazon Brand Store</p>
   
             </a>
+            <li class="project-item active" data-filter-item data-category="others">
+              <a href="https://drive.google.com/drive/folders/1a-WDDzStcYukdecpFFe6ut6ilvmG4P_y" target="_blank">
+  
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+  
+                  <img src="./assets/images/project03.jpg" alt="orizon" loading="lazy">
+                </figure>
+  
+                <h3 class="project-title">Jobverse</h3>
+  
+                <p class="project-category">Logo</p>
+  
+              </a>
+            </li>
           </li>
           <li class="project-item active" data-filter-item data-category="others">
             <a href="https://www.amazon.it/stores/page/2D2043F5-5F10-4135-834A-3F67AADE80A0?ingress=0&visitId=1a89e73b-484c-4605-a5a2-7b7029e4c3f8" target="_blank">
