--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@ highest quality standard being met.
           </li>
 
           <li class="project-item active" data-filter-item data-category="others">
-            <a href="https://drive.google.com/drive/folders/1hHwlMj8nxr7a59wk6hNCldOFBbyLM_nR" target="_blank">
+            <a href="https://drive.google.com/file/d/1MM3nrS0n-mDGR40IPefIsOHxHtN-cnoV/view?usp=drive_link" target="_blank">
 
               <figure class="project-img">
                 <div class="project-item-icon-box">
@@ -885,7 +885,7 @@ highest quality standard being met.
 
 
           <li class="project-item active" data-filter-item data-category="others">
-            <a href="https://drive.google.com/drive/folders/1a-WDDzStcYukdecpFFe6ut6ilvmG4P_y" target="_blank">
+            <a href="https://drive.google.com/file/d/1GnFW_A6W4NdpmA0zXeGLgXCWQLFnhs_8/view?usp=drive_link" target="_blank">
 
               <figure class="project-img">
                 <div class="project-item-icon-box">
@@ -971,7 +971,7 @@ highest quality standard being met.
             </a>
           </li>
           <li class="project-item active" data-filter-item data-category="others">
-            <a href="https://drive.google.com/drive/folders/1a-WDDzStcYukdecpFFe6ut6ilvmG4P_y" target="_blank">
+            <a href="https://drive.google.com/file/d/1MzuQ7VeXMShwH52wnGqPm7yCEgvGzxvl/view?usp=drive_link" target="_blank">
 
               <figure class="project-img">
                 <div class="project-item-icon-box">
@@ -1254,7 +1254,7 @@ highest quality standard being met.
   
             </a>
             <li class="project-item active" data-filter-item data-category="others">
-              <a href="https://drive.google.com/drive/folders/1a-WDDzStcYukdecpFFe6ut6ilvmG4P_y" target="_blank">
+              <a href="https://drive.google.com/file/d/1H3tRsfe1y0oCQphigfetcPm5xW-zd6ur/view?usp=drive_link" target="_blank">
   
                 <figure class="project-img">
                   <div class="project-item-icon-box">
